Work around gtk-doc limitations

gtk-doc gets confused by the win32 compat _utf8 defines.
So, hide those from it.
Bug https://bugzilla.gnome.org/show_bug.cgi?id=663554