gdk-pixbuf/gdk-pixbuf-core.h
@@ -270,11 +270,13 @@ GdkPixbuf *gdk_pixbuf_new_subpixbuf (GdkPixbuf *src_pixbuf,
 
 /* Simple loading */
 
+#ifndef __GTK_DOC_IGNORE__
 #ifdef G_OS_WIN32
 /* DLL ABI stability hack. */
 #define gdk_pixbuf_new_from_file gdk_pixbuf_new_from_file_utf8
 #define gdk_pixbuf_new_from_file_at_size gdk_pixbuf_new_from_file_at_size_utf8
 #define gdk_pixbuf_new_from_file_at_scale gdk_pixbuf_new_from_file_at_scale_utf8
+#endif
 #endif
 
 GdkPixbuf *gdk_pixbuf_new_from_file (const char *filename,
@@ -310,10 +312,12 @@ void       gdk_pixbuf_fill              (GdkPixbuf    *pixbuf,
 
 /* Saving */
 
+#ifndef __GTK_DOC_IGNORE__
 #ifdef G_OS_WIN32
 /* DLL ABI stability hack. */
 #define gdk_pixbuf_save gdk_pixbuf_save_utf8
 #define gdk_pixbuf_savev gdk_pixbuf_savev_utf8
+#endif
 #endif
 
 gboolean gdk_pixbuf_save           (GdkPixbuf  *pixbuf, 
